[MARKETING] - fix service url

--- a/js/config.json
+++ b/js/config.json
@@ -4,7 +4,7 @@ Object.defineProperty(config, "SERVICE_SERVER", {
 	enumerable : false,
 	configurable : false,
 	writable : false,
-	value : "http://kmelx.com"
+	value : "http://marketing.kmelx.com"
 })
 Object.defineProperty(config, "NOREPLAYMAIL", {
 	enumerable : false,
